--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,3 +1,4 @@
 @import "../libs/font-awesome.min.css"
 @import "../libs/bootstrap/scss/bootstrap-reboot.scss"
+@import "../libs/bootstrap/scss/bootstrap-grid.scss"
 @import "../libs/bootstrap/scss/utilities/_sizing.scss"
